# esplugin

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: parsing.rs
ffi/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
ffi/src/: common.rs  constants.rs  error.rs  form_id.rs  helpers.rs  lib.rs  plugin.rs
ffi/tests/: ffi.cpp  ffi.py
libespm/: Cargo.toml
libespm/src/: form_id.rs  group.rs  plugin.rs  record.rs
libespm/tests/: integration_test.rs
src/: error.rs  ffi.rs  form_id.rs  game_id.rs  group.rs  lib.rs  plugin.rs  record.rs  record_id.rs  subrecord.rs
src/ffi/: common.rs  constants.rs  form_id.rs  helpers.rs  mod.rs  plugin.rs
supply-chain/: audits.toml  config.toml
tests/: ffi.py  integration_test.rs
