[package]
name = "esplugin"
version = "6.1.3"
authors = ["Oliver Hamlet <oliver@ortham.net>"]
description = "A free software library for reading Elder Scrolls plugin (.esp/.esm/.esl) files."
repository = "https://github.com/Ortham/esplugin.git"
categories = ["games", "parsing"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.35"
memchr = "2.7.5"
nom = "8.0.0"
flate2 = { version = "1.1.2", optional = true }
unicase = "2.8.1"

[dev-dependencies]
criterion = "0.6.0"
tempfile = "3.20.0"

[features]
default = []
compressed-fields = ["flate2"]

[workspace]
members = ["ffi"]

[[bench]]
name = "parsing"
harness = false
