[package]
name = "esplugin"
description = "A free software library for reading Elder Scrolls plugin (.esp/.esm/.esl) files."
version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
encoding_rs = "0.8.35"
memchr = "2.7.5"
nom = "8.0.0"
flate2 = { version = "1.1.2", optional = true }
unicase = "2.8.1"

[dev-dependencies]
criterion = "0.7.0"
tempfile = "3.20.0"

[features]
default = []
compressed-fields = ["flate2"]

[[bench]]
name = "parsing"
harness = false

[workspace]
members = ["ffi"]

[workspace.package]
version = "6.1.3"
authors = ["Oliver Hamlet <oliver@ortham.net>"]
repository = "https://github.com/Ortham/esplugin.git"
categories = ["games", "parsing"]
license = "GPL-3.0"
edition = "2021"
