[package]
name = "esplugin"
description = "A free software library for reading Elder Scrolls plugin (.esp/.esm/.esl) files."
version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
encoding_rs = "0.8"
memchr = ">= 0.1.1, < 3"
nom = "8"
flate2 = { version = ">= 0.2.10, < 2", optional = true }
unicase = "2"

[dev-dependencies]
criterion = "0.7"
tempfile = "3"

[features]
default = []
compressed-fields = ["flate2"]

[lints]
workspace = true

[[bench]]
name = "parsing"
harness = false

[workspace]
members = ["ffi"]

[workspace.package]
version = "6.1.3"
authors = ["Oliver Hamlet <oliver@ortham.net>"]
repository = "https://github.com/Ortham/esplugin.git"
categories = ["games", "parsing"]
license = "GPL-3.0"
edition = "2021"

# Deny some rustc lints that are allow-by-default.
[workspace.lints.rust]
ambiguous_negative_literals = "forbid"
impl_trait_overcaptures = "forbid"
let_underscore_drop = "forbid"
missing_copy_implementations = "forbid"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
redundant_imports = "forbid"
redundant_lifetimes = "forbid"
trivial_casts = "forbid"
trivial_numeric_casts = "forbid"
unit_bindings = "forbid"
unreachable_pub = "forbid"
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
allow_attributes = "forbid"
as_conversions = "deny"
as_underscore = "forbid"
assertions_on_result_states = "deny"
big_endian_bytes = "forbid"
cfg_not_test = "forbid"
clone_on_ref_ptr = "forbid"
create_dir = "forbid"
dbg_macro = "forbid"
decimal_literal_representation = "forbid"
default_numeric_fallback = "forbid"
doc_include_without_cfg = "forbid"
empty_drop = "forbid"
error_impl_error = "deny"
exit = "forbid"
exhaustive_enums = "deny"
expect_used = "forbid"
filetype_is_file = "forbid"
float_cmp_const = "forbid"
fn_to_numeric_cast_any = "forbid"
get_unwrap = "forbid"
host_endian_bytes = "forbid"
if_then_some_else_none = "forbid"
indexing_slicing = "deny"
infinite_loop = "forbid"
integer_division = "forbid"
integer_division_remainder_used = "forbid"
iter_over_hash_type = "forbid"
let_underscore_must_use = "forbid"
lossy_float_literal = "forbid"
map_err_ignore = "forbid"
map_with_unused_argument_over_ranges = "forbid"
mem_forget = "forbid"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
mixed_read_write_in_expression = "forbid"
multiple_inherent_impl = "forbid"
multiple_unsafe_ops_per_block = "forbid"
mutex_atomic = "forbid"
mutex_integer = "forbid"
needless_raw_strings = "forbid"
non_ascii_literal = "forbid"
non_zero_suggestions = "forbid"
panic = "deny"
panic_in_result_fn = "forbid"
partial_pub_fields = "forbid"
pathbuf_init_then_push = "forbid"
precedence_bits = "forbid"
print_stderr = "forbid"
print_stdout = "forbid"
rc_buffer = "forbid"
rc_mutex = "forbid"
redundant_type_annotations = "forbid"
ref_patterns = "forbid"
rest_pat_in_fully_bound_structs = "forbid"
str_to_string = "forbid"
string_lit_chars_any = "forbid"
string_slice = "forbid"
string_to_string = "forbid"
suspicious_xor_used_as_pow = "forbid"
tests_outside_test_module = "forbid"
todo = "forbid"
try_err = "forbid"
undocumented_unsafe_blocks = "deny"
unimplemented = "forbid"
unnecessary_safety_comment = "forbid"
unneeded_field_pattern = "forbid"
unreachable = "forbid"
unused_result_ok = "forbid"
unwrap_in_result = "forbid"
unwrap_used = "deny"
use_debug = "forbid"
verbose_file_reads = "forbid"
