[package]
name = "esplugin-ffi"
version = "6.0.1"
authors = ["Oliver Hamlet <oliver@ortham.io>"]
description = "A wrapper library providing a C FFI for esplugin."
documentation = "https://docs.rs/esplugin-ffi"
repository = "https://github.com/Ortham/esplugin.git"
readme = "../README.md"
categories = ["games", "parsing"]
license = "GPL-3.0"
edition = "2021"
exclude = [
    "build/*",
    "include/*",
    "target/*",
]

[dependencies]
esplugin = { version = "6.0.1", path = ".." }
libc = "0.2"

[lib]
crate-type = ["staticlib"]
