[package]
name = "esplugin-ffi"
version = "6.1.3"
authors = ["Oliver Hamlet <oliver@ortham.net>"]
description = "A wrapper library providing a C FFI for esplugin."
repository = "https://github.com/Ortham/esplugin.git"
readme = "../README.md"
categories = ["games", "parsing"]
license = "GPL-3.0"
edition = "2021"
exclude = [
    "build/*",
    "include/*",
    "target/*",
]

[dependencies]
esplugin = { version = "6.1.3", path = ".." }
libc = "0.2"

[lib]
crate-type = ["staticlib"]
