[package]
name = "esplugin-ffi"
description = "A wrapper library providing a C FFI for esplugin."
readme = "../README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
esplugin = { path = ".." }
libc = "0.2"

[lib]
crate-type = ["staticlib"]

[lints]
workspace = true
